client/brogblog/src/Resources/css/styles.css
@media (min-width: 600px){

body {
    padding: 0;
    margin: 0;
    font-family: 'Roboto', sans-serif;
    /* background-color: royalblue; */
}


.container {
    width: 1100px;
    margin: 0 auto;
}
}

.page_container {
    min-height: 75vh;
    padding-top: 85px;
}

.page_wrapper {
    padding-top: 85px;
}


.font_oswald {
    font-family: 'oswald', sans-serif;
}


a {
    text-decoration: none;
    color: inherit;
}


/* ================== */
     /* header */
/* ================== */

header {
    padding: 10px 0px;
    transition: all 300ms ease-in;
}

header .header_logo {
    flex-grow: 1;
}

header .header_logo_venue {
    font-size: 40px;
    color: #f8333c;
}

header .header_logo_title {
    text-transform: uppercase;
    color: #f8333c;
}

.navBarList {
    text-decoration: none;
    color: #f8333c;
    text-transform: uppercase;
    font-family: 'oswald', sans-serif;
}

.menu {
    color: #f8333c;
    padding: 5px;
    font-size: 20px;
    font-family: 'oswald', sans-serif;
}

/* ================== */
     /* footer */
/* ================== */

.footerBackgroundColor {
    background-color: rgba(36, 36, 33, .9);
}

footer .logo {
    text-align: center;
    font-family: 'oswald', sans-serif;;
    color: #f8333c;
    font-size: 40px;
    padding: 11px 0px;
    border-bottom: 1px solid #4d4d4d;
}

footer .wrapper {
    display: flex;
    color: #f8333c;
}

footer .left,
footer .right {
    flex: 1;
}

footer .business_nfo {
    display: flex;
    flex-wrap: wrap;
}

footer .business_nfo .tag {
    flex-grow: 1;
    position: relative;
    width: 50%;
    margin-bottom: 30px;
}

footer .business_nfo .icon {
    position: absolute;
    font-size: 26px;
    top: 10px;
}

footer .business_nfo .nfo {
    padding-left: 40px;
}

/* ================== */
  /* Register/login */
/* ================== */
.register_login_container {
    display: flex;
    border: 1px solid #999592;
    border-top: 5px solid #999592;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    margin: 80px 0px 110px 0px;
    padding: 30px;
    min-height: 430px;
}

.register_login_container .left,
.register_login_container .right {
    flex: 1
}

.register_login_container h2 {
    margin: 20px 0px;
    text-transform: uppercase;
    color: #686868;
}

.register_login_container p {
    font-weight: 300;
    font-size: 16px;
    width: 90%;
}

/* ================== */
     /* About */
/* ================== */

.brogAbout {
    text-align: center;
    font-size: 3em;
}

.brogAboutMe{
    font-size: 2em;
    text-align: center;
}
/* ================== */
     /* buttons */
/* ================== */

.link_default, button {
    text-transform: uppercase;
    padding: 10px;
    display: table;
    background: #e1ddc3;
    margin-top: 10px;
}

/* ================== */
    /* Home */
/* ================== */

.homeContainer {
    display: flex;
    border: 1px solid #999592;
    border-top: 5px solid #999592;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    margin: 80px 0px 110px 0px;
    padding: 30px;
    min-height: 430px;
}
/* ================== */
      /* Form */
/* ================== */

input {
    font-size: 15px;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    padding: 10px 10px;
    width: 100%;
    margin: 10px 0px 0px 0px;
}

